force-app/main/default/objects/CventEvents__FieldsMapping__c/fields/CventEvents__CventObject__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__CventObject__c</fullName>
    <description>Stores mnemonic Cvent object name (either &apos;EVENT&apos;, &apos;SESSION&apos;, &apos;CONTACT&apos;, &apos;ATTENDEE&apos; or &apos;RESPONDENT&apos;).</description>
    <label>Cvent Object</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>