force-app/main/default/objects/CventEvents__FieldsMapping__c/fields/CventEvents__DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__DefaultValue__c</fullName>
    <description>Value which is filled in the target field in case the source field value is empty.</description>
    <inlineHelpText>Value which is filled in the target field in case the source field value is empty.</inlineHelpText>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>