force-app/main/default/objects/CventEvents__FieldsMapping__c/fields/CventEvents__Object__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Object__c</fullName>
    <description>Salesforce target object name used for mapping.</description>
    <inlineHelpText>Salesforce target object name used for mapping.</inlineHelpText>
    <label>Object</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>