force-app/main/default/objects/CventEvents__FieldsMapping__c/fields/CventEvents__SalesforceField__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SalesforceField__c</fullName>
    <description>Contact/Lead/Campaign Member field API name used for mapping.</description>
    <inlineHelpText>Contact/Lead/Campaign Member field API name used for mapping.</inlineHelpText>
    <label>Salesforce Field</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>