force-app/main/default/objects/CventEvents__FieldsMapping__c/fields/CventEvents__SyncDirection__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__SyncDirection__c</fullName>
    <description>Indicates the direction of the data flow this field mapping will be applied to.</description>
    <inlineHelpText>Indicates the direction of the data flow this field mapping will be applied to.</inlineHelpText>
    <label>Sync Direction</label>
    <length>18</length>
    <type>Text</type>
</CustomField>